--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     </nav>
 
     <!-- Home Section -->
-    <section id="home" style="height: 100vh; display: flex; align-items: center; padding: 0;">
-        <div class="hero-content">
-            <div class="hero-text">
+    <section id="home" style="height: 100vh; display: flex; align-items: center; padding: 80px 5% 0;">
+        <div class="hero-content" style="width: 100%; max-width: 1200px; margin: 0 auto; display: grid; grid-template-columns: 1fr 1fr; gap: 2rem; align-items: center;">
+            <div class="hero-text" style="padding-right: 2rem;">
                 <p class="welcome-text">CRAFTING DIGITAL EXPERIENCES</p>
                 <h1 class="fw-bold" style="font-family: 'Montserrat', sans-serif; display: flex; align-items: center;">
                     <span style="color: #333;">Hi I'm</span> 
@@ -54,8 +54,8 @@
                     <a href="#"><i class="fab fa-facebook"></i></a>
                 </div>
             </div>
-            <div class="hero-image">
-                <img src="images/jhoi.png" alt="Joy A. Ambrosio" class="profile-image">
+            <div class="hero-image" style="display: flex; justify-content: center; align-items: center; padding: 20px;">
+                <img src="images/jhoi.png" alt="Joy A. Ambrosio" class="profile-image" style="max-width: 100%; height: auto; border-radius: 50%;">
             </div>
         </div>
     </section>
@@ -133,7 +133,7 @@
     <section id="certifications" style="min-height: 100vh; display: flex; flex-direction: column; justify-content: flex-start; padding: 4rem 5%; background-color: #fce4ec;">
         <h2 class="text-center mb-5" style="position: relative; margin-top: 2rem; font-size: 2.5rem; color: #008080; text-transform: uppercase; letter-spacing: 2px; text-shadow: 2px 2px 4px rgba(0,0,0,0.1);">Certifications</h2>
         <div class="about-content">
-            <div class="about-text" style="max-width: 800px; margin: 0 auto;">
+            <div class="about-text" style="max-width: 1200px; margin: 0 auto;">
                 <div class="cert-container" style="background: rgba(255,255,255,0.9); border-radius: 20px; padding: 30px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); max-height: 400px; overflow-y: auto;">
                     <ul class="list-unstyled cert-list">
                         <li class="cert-item mb-4" style="border-bottom: 2px solid #f0f0f0; padding-bottom: 15px; transition: all 0.3s ease;">
